--- a/REACT/my-app/public/index.html
+++ b/REACT/my-app/public/index.html
@@ -29,6 +29,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <div id="example"></div>
+    <script type="text/babel" src="helloworld_react.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
